refactor(portfolio): 도메인 중심 메트릭 계산 로직 리팩토링 및 #192 문서화 통합