@@ -68,8 +68,8 @@ class PortfolioAnalysisServiceTest {
         Portfolio portfolio = Portfolio.create(MEMBER_ID, "테스트 포트폴리오", "설명");
         
         // 목표 비중 합계를 100%로 맞춤 (또는 모두 0%)
-        PortfolioItem samsung = PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(100));
-        PortfolioItem cash = PortfolioItem.createCash(BigDecimal.valueOf(100000), "KRW", BigDecimal.ZERO);
+        PortfolioItem samsung = PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(100), LocalDate.now());
+        PortfolioItem cash = PortfolioItem.createCash(BigDecimal.valueOf(100000), "KRW", BigDecimal.ZERO, LocalDate.now());
         portfolio.updateItems(List.of(samsung, cash));
 
         StockPrice samsungPrice = createStockPrice("005930", 60000, 58000);
@@ -77,7 +77,7 @@ class PortfolioAnalysisServiceTest {
                 portfolio,
                 Map.of(),
                 Map.of("005930", List.of(samsungPrice)),
-                PortfolioStats.create(portfolio, LocalDate.now(), BigDecimal.valueOf(10), BigDecimal.valueOf(1.5), BigDecimal.valueOf(1.1))
+                PortfolioStats.create(portfolio, LocalDate.now(), BigDecimal.valueOf(10), BigDecimal.valueOf(1.5), BigDecimal.valueOf(1.1), BigDecimal.ZERO, BigDecimal.ZERO)
         );
 
         given(dataLoader.loadContext(PORTFOLIO_ID, MEMBER_ID)).willReturn(context);
@@ -98,8 +98,8 @@ class PortfolioAnalysisServiceTest {
         // given
         Portfolio portfolio = Portfolio.create(MEMBER_ID, "테스트 포트폴리오", "설명");
         // 비중 합계 100% (50 + 50)
-        PortfolioItem samsung = PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(50));
-        PortfolioItem cash = PortfolioItem.createCash(BigDecimal.valueOf(500000), "KRW", BigDecimal.valueOf(50));
+        PortfolioItem samsung = PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(50), LocalDate.now());
+        PortfolioItem cash = PortfolioItem.createCash(BigDecimal.valueOf(500000), "KRW", BigDecimal.valueOf(50), LocalDate.now());
         portfolio.updateItems(List.of(samsung, cash));
 
         StockPrice samsungPrice = createStockPrice("005930", 50000, 50000);
@@ -129,8 +129,8 @@ class PortfolioAnalysisServiceTest {
         // given
         Portfolio portfolio = Portfolio.create(MEMBER_ID, "테스트 포트폴리오", "설명");
         // 비중 합계 100% (60 + 40)
-        PortfolioItem samsung = PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(60));
-        PortfolioItem cash = PortfolioItem.createCash(BigDecimal.valueOf(500000), "KRW", BigDecimal.valueOf(40));
+        PortfolioItem samsung = PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(60), LocalDate.now());
+        PortfolioItem cash = PortfolioItem.createCash(BigDecimal.valueOf(500000), "KRW", BigDecimal.valueOf(40), LocalDate.now());
         portfolio.updateItems(List.of(samsung, cash));
 
         StockPrice samsungPrice = createStockPrice("005930", 50000, 50000);
@@ -154,11 +154,10 @@ class PortfolioAnalysisServiceTest {
     @DisplayName("백테스팅 실행: 선택한 전략에 따라 백테스팅 엔진을 호출하고 결과를 반환한다")
     void runBacktest_Success() {
         // given
-        // LUMPSUM -> LUMP_SUM
         BacktestPortfolioCommand command = new BacktestPortfolioCommand(MEMBER_ID, PORTFOLIO_ID, "LUMP_SUM", BigDecimal.valueOf(10000000), "005930", org.stockwellness.domain.portfolio.RebalancingPeriod.MONTHLY, Map.of());
         
         Portfolio portfolio = Portfolio.create(MEMBER_ID, "테스트", "설명");
-        portfolio.updateItems(List.of(PortfolioItem.createStock("005930", BigDecimal.ONE, BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(100))));
+        portfolio.updateItems(List.of(PortfolioItem.createStock("005930", BigDecimal.ONE, BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(100), LocalDate.now())));
         AnalysisContext context = new AnalysisContext(portfolio, Map.of(), Map.of(), null);
         
         given(dataLoader.loadContext(PORTFOLIO_ID, MEMBER_ID)).willReturn(context);
@@ -167,8 +166,8 @@ class PortfolioAnalysisServiceTest {
         BacktestResult mockEngineResult = new BacktestResult(
                 Collections.emptyList(), BigDecimal.TEN, BigDecimal.ONE, BigDecimal.ONE,
                 BigDecimal.TEN, BigDecimal.ONE, BigDecimal.ONE, BigDecimal.ONE,
-                BigDecimal.TEN, BigDecimal.ZERO, Map.of(), Collections.emptyList(), "AI 조언입니다.");
-        given(backtestEngine.runLumpSum(any(), anyMap(), any(), any(org.stockwellness.domain.portfolio.RebalancingPeriod.class))).willReturn(mockEngineResult);
+                BigDecimal.ONE, BigDecimal.ZERO, BigDecimal.ZERO, Map.of(), Collections.emptyList(), "AI 조언입니다.");
+        given(backtestEngine.runLumpSum(any(), anyMap(), any(), any(org.stockwellness.domain.portfolio.RebalancingPeriod.class), anyString(), any())).willReturn(mockEngineResult);
         given(aiAdvisorUseCase.generateBacktestAdvice(any(), anyString(), anyString())).willReturn("AI 조언입니다.");
 
         // when
@@ -186,8 +185,8 @@ class PortfolioAnalysisServiceTest {
         Portfolio portfolio = Portfolio.create(MEMBER_ID, "테스트", "설명");
         // 비중 합계 100% (50 + 50)
         portfolio.updateItems(List.of(
-                PortfolioItem.createStock("005930", BigDecimal.ONE, BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(50)),
-                PortfolioItem.createStock("000660", BigDecimal.ONE, BigDecimal.valueOf(100000), "KRW", BigDecimal.valueOf(50))
+                PortfolioItem.createStock("005930", BigDecimal.ONE, BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(50), LocalDate.now()),
+                PortfolioItem.createStock("000660", BigDecimal.ONE, BigDecimal.valueOf(100000), "KRW", BigDecimal.valueOf(50), LocalDate.now())
         ));
         AnalysisContext context = new AnalysisContext(portfolio, Map.of(), Map.of(), null);
         
@@ -208,7 +207,7 @@ class PortfolioAnalysisServiceTest {
         // given
         Portfolio portfolio = Portfolio.create(MEMBER_ID, "테스트", "설명");
         portfolio.updateItems(List.of(
-                PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(100))
+                PortfolioItem.createStock("005930", BigDecimal.valueOf(10), BigDecimal.valueOf(50000), "KRW", BigDecimal.valueOf(100), LocalDate.now())
         ));
         
         StockPrice samsungPrice = createStockPrice("005930", 60000, 58000);
@@ -221,11 +220,12 @@ class PortfolioAnalysisServiceTest {
         given(simulationDataProvider.loadData(anyList(), anyString(), eq(start), eq(end)))
                 .willReturn(new SimulationData(Map.of(), Map.of()));
 
-        BacktestResult mockPerf = new BacktestResult(List.of(), BigDecimal.valueOf(15.5), BigDecimal.valueOf(5.2), BigDecimal.ONE,
-                BigDecimal.valueOf(20.0), BigDecimal.valueOf(8.4), BigDecimal.valueOf(3.2), BigDecimal.ONE,
-                BigDecimal.valueOf(15.5), BigDecimal.ZERO, Map.of(), List.of(), "Advice");
+        BacktestResult mockPerf = new BacktestResult(
+                Collections.emptyList(), BigDecimal.valueOf(15.5), BigDecimal.valueOf(5.2), BigDecimal.ONE,
+                BigDecimal.ONE, BigDecimal.valueOf(20.0), BigDecimal.valueOf(8.4), BigDecimal.valueOf(3.2),
+                BigDecimal.ONE, BigDecimal.ZERO, BigDecimal.ZERO, Map.of(), Collections.emptyList(), "Advice");
         
-        given(backtestEngine.runLumpSum(any(), anyMap(), any(), any())).willReturn(mockPerf);
+        given(backtestEngine.runLumpSum(any(), anyMap(), any(), any(), anyString(), any())).willReturn(mockPerf);
 
         // when
         PortfolioAnalysisSummaryResult result = portfolioAnalysisService.getAnalysisSummary(MEMBER_ID, PORTFOLIO_ID, start, end);
@@ -251,6 +251,8 @@ class PortfolioAnalysisServiceTest {
                 BigDecimal.valueOf(prevClose),
                 100L,
                 BigDecimal.valueOf(10000),
+                BigDecimal.ZERO,
+                BigDecimal.ZERO,
                 null
         );
     }
